// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerDeleter disables the button and displays a transition test while requesting deletion 1`] = `
<button
  class="tlp-button-danger"
  disabled="disabled"
  type="button"
>
  <i
    class="tlp-button-icon fa fa-fw fa-spin fa-circle-o-notch"
  />
   
  <span
    data-current-language="en_US"
    data-msgid="Remove banner"
  >
    Remove banner
  </span>
</button>
`;

exports[`BannerDeleter displays a delete button 1`] = `
<button
  class="tlp-button-danger"
  type="button"
>
  <!---->
   
  <span
    data-current-language="en_US"
    data-msgid="Remove banner"
  >
    Remove banner
  </span>
</button>
`;
